--- a/whatwehad.html
+++ b/whatwehad.html
@@ -14,6 +14,7 @@
   <p>Biodiversity, ecosystem functions, and Native American
   culture</p>
   <h2>Biodiversity</h2>
+  <div class="roundedImages">
   <div class="tiledFigures">
     <figure>
       <h3>Atlantic White Cedar</h3><img src="images/awc.webp" alt=
@@ -43,7 +44,8 @@
         Taxodium distichum
       </figcaption>
     </figure>
-  </div>
+  </div class="tiledFigures">
+  </div class="roundedImages">
   <h2>Wetland Ecosystem Functions</h2>
   <div class="tiledBlurbs">
     <h3>Carbon Sequestration</h3>
