renamed tiledFigures to figureGallery

--- a/whatwehad.html
+++ b/whatwehad.html
@@ -14,7 +14,7 @@
   <p>Biodiversity, ecosystem functions, and Native American
   culture</p>
   <h2>Biodiversity</h2>
-  <div class="tiledFigures">
+  <div class="figureGallery">
     <figure>
       <h3>Atlantic White Cedar</h3><img src="images/awc.webp" alt=
       "Atlantic White Cedar">
