added front page images

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   Crisis. These are what we fight.</p>
   <p>Coastal Resilience. Biodiversity. Climate Adapatation and
   Mitigation. These are what we seek.</p>
+  <div class=twoColumns>
   <h2>Mission</h2>
   <p>Coastal ecosystems are biodiverse and perform many services
   valued by society. As a result of climate change, ghost forests
@@ -27,6 +28,8 @@
   authentic research efforts can simultaneously hasten the pace of
   research now, and widen the STEAM pipeline to ensure a workforce
   empowered to address the challenges of the future.</p>
+  <img src="images/holding_sapling.webp">
+  </div>
   <h2>More Information</h2>
   <div class="tiledBlurbs">
     <h3><a href="whatwehad.html">What We Had</a></h3>
