--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   Crisis. These are what we fight.</p>
   <p>Coastal Resilience. Biodiversity. Climate Adapatation and
   Mitigation. These are what we seek.</p>
-  <div class=twoColumns>
+  <div class="textLeftImageRight">
   <h2>Mission</h2>
   <p>Coastal ecosystems are biodiverse and perform many services
   valued by society. As a result of climate change, ghost forests
