--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
   Crisis. These are what we fight.</p>
   <p>Coastal Resilience. Biodiversity. Climate Adapatation and
   Mitigation. These are what we seek.</p>
-  <div class="textLeftImageRight">
+  <div class="floatRight">
   <h2>Mission</h2>
+  <img src="images/holding_sapling.webp">
   <p>Coastal ecosystems are biodiverse and perform many services
   valued by society. As a result of climate change, ghost forests
   (eerie gray stands of dead trees) are forming, shorelines are
@@ -28,7 +29,6 @@
   authentic research efforts can simultaneously hasten the pace of
   research now, and widen the STEAM pipeline to ensure a workforce
   empowered to address the challenges of the future.</p>
-  <img src="images/holding_sapling.webp">
   </div>
   <h2>More Information</h2>
   <div class="tiledBlurbs">
