updated tiled blurbs to use flex boxes

--- a/whatwehad.html
+++ b/whatwehad.html
@@ -45,25 +45,33 @@
     </figure>
   </div>
   <h2>Wetland Ecosystem Functions</h2>
-  <div class="tiledBlurbs">
-    <h3>Carbon Sequestration</h3>
-    <p>Organic material containing carbon is trapped in peat
-    because no oxygen is available for decomposition</p>
-    <h3>Unique Habitat and Biodiversity</h3>
-    <p>As a habitat frequently inundated with water, various plants
-    and animals have adapted to live in these conditions not found
-    elsewhere in the world</p>
-    <h3>Buffer Storms and Floods</h3>
-    <p>Wetland vegetation along coastlines prevents erosion by
-    dampening wind and water strength before reaching inland
-    communities</p>
-    <h3>Improve Water Quality</h3>
-    <p>Wetlands function as natural filters of sediment and
-    pollutants before they reach larger bodies of water (Chesapeake
-    Bay or Atlantic Ocean)</p>
+  <div class="flexColumns">
+    <div class="tiledBlurb">
+        <h3>Carbon Sequestration</h3>
+        <p>Organic material containing carbon is trapped in peat
+        because no oxygen is available for decomposition</p>
+    </div>
+    <div class="tiledBlurb">
+        <h3>Unique Habitat and Biodiversity</h3>
+        <p>As a habitat frequently inundated with water, various plants
+        and animals have adapted to live in these conditions not found
+        elsewhere in the world</p>
+    </div>
+    <div class = "tiledBlurb">
+        <h3>Buffer Storms and Floods</h3>
+        <p>Wetland vegetation along coastlines prevents erosion by
+        dampening wind and water strength before reaching inland
+        communities</p>
+    </div>
+    <div class = "tiledBlurb">
+        <h3>Improve Water Quality</h3>
+        <p>Wetlands function as natural filters of sediment and
+        pollutants before they reach larger bodies of water (Chesapeake
+        Bay or Atlantic Ocean)</p>
+    </div>
   </div>
   <h2>Native American Culture</h2>
-  <div class="twoColumns">
+  <div class="flexColumns">
     <div>
       <h3>Nansemond Tribe</h3>
       <p>Prior to European colonists, the Nansemond Tribe inhabited
