made title page and link blurbs use grid system

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
   Crisis. These are what we fight.</p>
   <p>Coastal Resilience. Biodiversity. Climate Adapatation and
   Mitigation. These are what we seek.</p>
-  <div class="floatRight">
   <h2>Mission</h2>
-  <img src="images/holding_sapling.webp">
+  <div class="equalColumns">
   <p>Coastal ecosystems are biodiverse and perform many services
   valued by society. As a result of climate change, ghost forests
   (eerie gray stands of dead trees) are forming, shorelines are
@@ -29,19 +28,28 @@
   authentic research efforts can simultaneously hasten the pace of
   research now, and widen the STEAM pipeline to ensure a workforce
   empowered to address the challenges of the future.</p>
+  <img src="images/holding_sapling.webp">
   </div>
   <h2>More Information</h2>
-  <div class="tiledBlurbs">
-    <h3><a href="whatwehad.html">What We Had</a></h3>
-    <p>Biodiversity, ecosystem functions, and Native American
-    culture</p>
-    <h3>What We Did</h3>
-    <p>Anthropogenic mishaps and detrimental consequences</p>
-    <h3>What We Are Doing About It</h3>
-    <p>Statewide STEAM mentoring, authentic collaborative research,
-    and public science studies</p>
-    <h3>The Team</h3>
-    <p>Students, faculty, collaborators, and partners</p>
+  <div class="equalColumns">
+    <div>
+        <h3><a href="whatwehad.html">What We Had</a></h3>
+        <p>Biodiversity, ecosystem functions, and Native American
+        culture</p>
+    </div>
+    <div>
+        <h3>What We Did</h3>
+        <p>Anthropogenic mishaps and detrimental consequences</p>
+    </div>
+    <div>
+        <h3>What We Are Doing About It</h3>
+        <p>Statewide STEAM mentoring, authentic collaborative research,
+        and public science studies</p>
+    </div>
+    <div>
+        <h3>The Team</h3>
+        <p>Students, faculty, collaborators, and partners</p>
+    </div>
   </div>
 </body>
 </html>
