updated text columns to use equalColumn using grid

--- a/whatwehad.html
+++ b/whatwehad.html
@@ -71,7 +71,7 @@
     </div>
   </div>
   <h2>Native American Culture</h2>
-  <div class="flexColumns">
+  <div class="equalColumns">
     <div>
       <h3>Nansemond Tribe</h3>
       <p>Prior to European colonists, the Nansemond Tribe inhabited
@@ -84,6 +84,8 @@
       Some families assimilated to an English lifestyle, while
       others adhered to a traditional lifestyle in Norfolk County,
       VA.</p>
+    </div>
+    <div>
       <h3>Construction</h3>
       <p>Atlantic White Cedar logs were used to construct canoes
       and frame houses due to its light weight and resistance to
@@ -96,6 +98,7 @@
       bruises.</p>
       <p>Wood powder poultice were used for exterior wounds.</p>
     </div>
+  </div> 
     <figure>
       <img src="images/making_their_boats.webp" alt=
       "Native Americans making boats">
