everything used tiledBlurbs and equalColumns now

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         culture</p>
     </div>
     <div>
-        <h3>What We Did</h3>
+        <h3><a href="whatwedid.html">What We Did</a></h3>
         <p>Anthropogenic mishaps and detrimental consequences</p>
     </div>
     <div>
