--- a/whatwehad.html
+++ b/whatwehad.html
@@ -45,7 +45,7 @@
     </figure>
   </div>
   <h2>Wetland Ecosystem Functions</h2>
-  <div class="flexColumns">
+  <div class="equalColumns">
     <div class="tiledBlurb">
         <h3>Carbon Sequestration</h3>
         <p>Organic material containing carbon is trapped in peat
@@ -57,6 +57,8 @@
         and animals have adapted to live in these conditions not found
         elsewhere in the world</p>
     </div>
+  </div>
+  <div class="equalColumns">
     <div class = "tiledBlurb">
         <h3>Buffer Storms and Floods</h3>
         <p>Wetland vegetation along coastlines prevents erosion by
@@ -70,6 +72,7 @@
         Bay or Atlantic Ocean)</p>
     </div>
   </div>
+
   <h2>Native American Culture</h2>
   <div class="equalColumns">
     <div>
