--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
   <h2>More Information</h2>
   <div class="equalColumns">
     <div>
-        <h3><a href="whatwehad.html">What We Had</a></h3>
+        <h3><a href="what_we_had.html">What We Had</a></h3>
         <p>Biodiversity, ecosystem functions, and Native American
         culture</p>
     </div>
     <div>
-        <h3><a href="whatwedid.html">What We Did</a></h3>
+        <h3><a href="what_we_did.html">What We Did</a></h3>
         <p>Anthropogenic mishaps and detrimental consequences</p>
     </div>
     <div>
-        <h3>What We Are Doing About It</h3>
+        <h3><a href="what_we_are_doing.html">What We Are Doing About It</a></h3>
         <p>Statewide STEAM mentoring, authentic collaborative research,
         and public science studies</p>
     </div>
