updated 'what we are doing' and added new images

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   authentic research efforts can simultaneously hasten the pace of
   research now, and widen the STEAM pipeline to ensure a workforce
   empowered to address the challenges of the future.</p>
-  <img src="images/holding_sapling.webp">
+  <img src="images/holding_sapling.jpg">
   </div>
   <h2>More Information</h2>
   <div class="equalColumns">
@@ -47,9 +47,11 @@
         and public science studies</p>
     </div>
     <div>
-        <h3>The Team</h3>
+        <h3><a href="the_team.html">The Team</a></h3>
         <p>Students, faculty, collaborators, and partners</p>
     </div>
   </div>
+
+  <h2>Check out <a href="symposium_2024.html">Symposium 2024!</a></h2>
 </body>
 </html>
