--- a/what_we_are_doing.html
+++ b/what_we_are_doing.html
@@ -12,17 +12,35 @@
 <h1>What We Are Doing About It</h1>
 
 <h2>Statewide VA High School STEAM Mentoring</h2>
+<div class="equalColumns">
+<div>
+<img src="images/dahria_with_ADD_students.jpg">
+</div>
+<div>
 <p>High schools in Newport News, Portsmouth,  Williamsburg, Hampton Hanover, Virginia Beach,
 and Northern Neck have partnered with CNU to conduct meaningful,
 authentic research on the salt tolerance of Atlantic white cedar seedlings.</p>
 <p>In our third year, we have over 200 participating students at 10 schools in the Tidewater region.</p>
 <p><a href="https://youtu.be/W5Gno3ZmJK4">Check out this 2 minute video highlighting research and mentorship in our two Neport News Public Schools.</a></p>
- 
+</div>
+</div>
+
+
 <h2>Range Wide Expansion</h2>
 <p>Fear to Hope is expanding throughout the range of Atlantic White Cedar, Maine to the Gulf Coast.</p>
 <p>Students in 7th grade through community college representing 28 schools from Maine to the Gulf Coast
 will test temperature tolerance, as well as salt tolerance in Atlantic white cedar</p>
 
+<div class="equalColumns">
+<div>
+<div class="tiledBlurb">
+<img src="images/ADD_students_and_tree_ring.webp">
+</div>
+<div class="tiledBlurb">
+<img src="images/ADD_students_learning.webp">
+</div>
+</div>
+<div>
 <h2>Partnership with An Achievable Dream</h2>
 <p>In fall 2021, CNU began its first F2H partnership with An Achievable Dream (AAD),
 a school in Newport News that provides a unique and disciplined academic environment
@@ -35,7 +53,11 @@ and color data, and they continued these measurements twice a week. </p>
 <p>In February 2022, nine AAD students visited CNU's campus where they began
 analyzing their data, attended a lecture by Dr. Atkinson, took a tour of CNU's
 campus, and ate lunch in the dining halls.</p>
+</div>
+</div>
 
+<div class="equalColumns">
+<div>
 <h2>Public Science Study</h2>
 <p>49 AWC seedlings reside on CNU's campus as a reminder that ghost forests are forming
 all along the Atlantic Coast due to climate change.</p>
@@ -43,6 +65,17 @@ all along the Atlantic Coast due to climate change.</p>
 <a href="https://madisonsquarepark.org/art/exhibitions/maya-lin-ghost-forest/">
 public ghost forest display.</a>
 She erected 49 dead 40+ foot tall AWC trees in Madison Square Park, NYC.</p>
+</div>
+<div>
+<p>maya lin figure</p>
+</div>
+<div>
+<p>watering saplings</p>
+</div>
+</div>
+
+
+
 
 <h2>Events for Student Engagement</h2>
 <h3>Great Dismal Swamp Planting</h3>
