--- a/what_we_are_doing.html
+++ b/what_we_are_doing.html
@@ -31,6 +31,9 @@ authentic research on the salt tolerance of Atlantic white cedar seedlings.</p>
 <p>Students in 7th grade through community college representing 28 schools from Maine to the Gulf Coast
 will test temperature tolerance, as well as salt tolerance in Atlantic white cedar</p>
 
+
+
+<h2>Partnership with An Achievable Dream</h2>
 <div class="equalColumns">
 <div>
 <div class="tiledBlurb">
@@ -41,7 +44,6 @@ will test temperature tolerance, as well as salt tolerance in Atlantic white ced
 </div>
 </div>
 <div>
-<h2>Partnership with An Achievable Dream</h2>
 <p>In fall 2021, CNU began its first F2H partnership with An Achievable Dream (AAD),
 a school in Newport News that provides a unique and disciplined academic environment
 to level the playing field for students in under-served communities. </p>
@@ -56,9 +58,10 @@ campus, and ate lunch in the dining halls.</p>
 </div>
 </div>
 
+
+<h2>Public Science Study</h2>
 <div class="equalColumns">
 <div>
-<h2>Public Science Study</h2>
 <p>49 AWC seedlings reside on CNU's campus as a reminder that ghost forests are forming
 all along the Atlantic Coast due to climate change.</p>
 <p>Inspiration for this project was taken from artist Maya Lin's
@@ -67,10 +70,13 @@ public ghost forest display.</a>
 She erected 49 dead 40+ foot tall AWC trees in Madison Square Park, NYC.</p>
 </div>
 <div>
-<p>maya lin figure</p>
+<img src="images/maya_lin_ghost_forest.jpg">
+<p>Maya Lin produced a harsh symbol of the devastation of climate change and a stark reminder of a looming environmental calamity</p>
 </div>
+
 <div>
-<p>watering saplings</p>
+<img src="images/watering_saplings.webp">
+<p>A student waters the 49 seedlings that are growing publicly on CNU's campus as a symbol of hope and resiliency for this threatened ecosystem</p>
 </div>
 </div>
 
@@ -82,9 +88,32 @@ She erected 49 dead 40+ foot tall AWC trees in Madison Square Park, NYC.</p>
 <p>11 CNU students accompanied by Dr. Atkinson ventured to the Great Dismal Swamp National
 Wildlife Refuge in December 2021 where they planted <strong>750</strong> seedlings of Atlantic White Cedar.</p>
 <p>In November 2022, 6 students and Dr. Atkinson planted <strong>1000 AWC seedlings</strong>!</p>
+<div class="equalColumns">
+<div>
+<img src="images/2022_planting.webp">
+</div>
+<div>
+<img src="images/2023_planting.jpg">
+</div>
+</div>
+
 
 <h3>Adopt-A-Seedling</h3>
 <p>CNU student groups had the opportunity to 'adopt' and name a seedling in order to raise awareness about Fear to Hope.</p>
 <p>While adopters do not get to keep the seedlings, they receive periodic updates about the project and invitations to
 assist in gathering measurements of the seedlings.</p>
 
+
+<div class="equalColumns">
+<div>
+<img src="images/2023_adoption_small_group.jpg">
+</div>
+<div>
+<img src="images/2023_adoption_with_sign.jpg">
+</div>
+</div>
+
+
+
+</body>
+</html>
