finished team page

--- a/symposium_2024.html
+++ b/symposium_2024.html
@@ -24,6 +24,8 @@ those who work as a STEAM environmental professional.</p>
 
 <h2>Event Schedule</h2>
 
+<div class="equalColumns">
+
 <ul>
   <li><strong>9:00 am - 10:00 am</strong> : Poster Set Up</li>
   <li><strong>10:00 am - 10:30 am</strong> : Awards Ceremony</li>
@@ -32,6 +34,10 @@ those who work as a STEAM environmental professional.</p>
   <li><strong>1:00 pm - 1:30 pm</strong> : Closing Remarks</li>
 </ul>
 
+<img src="images/2023_symposium/group.webp">
+
+
+</div>
 
 <h2>Symposium Design</h2>
 <p>During the Colloquy Sessions:
