--- a/the_team.html
+++ b/the_team.html
@@ -14,3 +14,115 @@
 <h1>The Team</h1>
 <p>Meet the collaborating CNU faculty and students from diverse perspectives and disciplines.
 See the collaborators and donors making this project a possibility.</p>
+
+<h2>Team Members:</h2>
+<div class="equalColumns">
+
+  <div class="memberTile">
+  <img src="images/team/robert_atkinson.png">
+  <h3>Dr. Rob Atkinson</h3>
+  <p>Professor of Biology</p>
+  </div>
+
+  <div class="memberTile">
+  <img src="images/team/janet_steven.png">
+  <h3>Dr. Janet Steven</h3>
+  <p>Professor of Biology</p>
+  </div>
+
+  <div class="memberTile">
+  <img src="images/team/linda_manning.jpg">
+  <h3>Dr. Linda Manning</h3>
+  <p>Professor of Communications</p>
+  <p>Director of the Center for Sustainability in Education</p>
+  </div>
+
+</div>
+<div class="equalColumns">
+
+  <div class="memberTile">
+  <img src="images/team/jon_russo.webp">
+  <h3>Jon Russo</h3>
+  <p>CWC Lab Manager</p>
+  <p>Mentor</p>
+  </div>
+
+  <div class="memberTile">
+  <img src="images/team/caroline_dillard.jpg">
+  <h3>Caroline Dillard</h3>
+  <p>F2H Student Lead</p>
+  <p>Mentor</p>
+  </div>
+
+  <div class="memberTile">
+  <img src="images/team/madelyn_steimer.webp">
+  <h3>Madelyn Steimer </h3>
+  <p>Data integrity</p>
+  <p>Mentor</p>
+  </div>
+
+</div>
+<div class="equalColumns">
+
+  <div class="memberTile">
+  <img src="images/team/jordan_williams.webp">
+  <h3>Jordan Williams</h3>
+  <p>Mentor</p>
+  </div>
+
+  <div class="memberTile">
+  <img src="images/team/bri_powers.webp">
+  <h3>Bri Powers</h3>
+  <p>Mentor</p>
+  </div>
+
+  <div class="memberTile">
+  <img src="images/team/j_mitchell_doyle.webp">
+  <h3>J. Mitchell Doyle</h3>
+  <p>Master's thesis on AWC launched the Fear to Hope project</p>
+  </div>
+
+</div>
+
+<div class="centered">
+<div>
+<h3>Members Not Pictured:</h3>
+<ul>
+<li>Lucas Sharrett</li>
+<li>Alex Arena</li>
+<li>Aleena Norris</li>
+<li>Haleigh Earsing</li>
+</ul>
+</div>
+
+<div class="equalColumns">
+
+<div>
+<h2>Collaborators</h2>
+<ul>
+<li>VA Academy of Science</li>
+<li>VA Junior Academy of Science</li>
+<li>VA Department of Forestry</li>
+<li>NC Forest Service</li>
+<li>Great Dismal Swamp Wildlife Refuge</li>
+<li>Tidmarsh Living Observatory</li>
+</ul>
+</div>
+
+<div>
+<h2>Donors</h2>
+<ul>
+<li>Smithfield Foods</li>
+<li>VA Department of Environmental Quality</li>
+<li>Tetra Tech</li>
+<li>VA Department of Wildlife Resources</li>
+<li>VA Association of Wetland Professionals</li>
+<li>Bonner Foundation</li>
+<li>Wetland Studies and Solutions, Inc.</li>
+<li>Chesapeake Bay Foundation</li>
+<li>Dominion Energy</li>
+</ul>
+</div>
+
+</div>
+
