--- a/what_we_did.html
+++ b/what_we_did.html
@@ -11,6 +11,15 @@
 </head>
 <body>
 
+<nav>
+<a href="index.html">Home</a> |
+<a href="what_we_had.html">What We Had</a> |
+<a href="what_we_did.html">What We Did</a> |
+<a href="what_we_are_doing.html">What We Are Doing About It</a>
+<a href="symposium_2024.html">Symposium 2024</a>
+<a href="the_team.html">The Team</a>
+</nav>
+
 <h1>What We Did</h1>
 <p>The anthropogenic (human caused) mishaps and the
 detrimental consequences for wetland ecosystems</p>
