--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
   <meta name="viewport" content=
   "width=device-width, initial-scale=1">
   <link rel="stylesheet" href="stylesheet.css">
-  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
+<body>
+
+<nav>
+<a href="index.html">Home</a> |
+<a href="what_we_had.html">What We Had</a> |
+<a href="what_we_did.html">What We Did</a> |
+<a href="what_we_are_doing.html">What We Are Doing About It</a>
+<a href="symposium_2024.html">Symposium 2024</a>
+<a href="the_team.html">The Team</a>
+</nav>
 <body>
   <h1>Fear to Hope</h1>
   <p>Ghost Forests. Species Extinction. Eco-Anxiety. Climate
