--- a/symposium_2024.html
+++ b/symposium_2024.html
@@ -11,6 +11,15 @@
 </head>
 <body>
 
+<nav>
+<a href="index.html">Home</a> |
+<a href="what_we_had.html">What We Had</a> |
+<a href="what_we_did.html">What We Did</a> |
+<a href="what_we_are_doing.html">What We Are Doing About It</a>
+<a href="symposium_2024.html">Symposium 2024</a>
+<a href="the_team.html">The Team</a>
+</nav>
+
 <h1>3rd Annual Fear to Hope Coastal Resilience Symposium</h1>
 <strong>Thursday, April 18, 2024</strong>
 <strong>Peebles Theater at Christopher Newport University</strong>
@@ -22,9 +31,20 @@ conversations of students and professionals and will focus on what the student's
 research is showing as well as conversations about what the mission and experience of
 those who work as a STEAM environmental professional.</p>
 
-<h2>Event Schedule</h2>
 
 <div class="equalColumns">
+<div>
+<h2><a href="https://advancement.cnu.edu/register/feartohope">Register Here!</a></h2>
+
+<ul>
+  <li>Registration is free!</li>
+  <li>Environmental Professionals are encouraged to bring items for an informational table</li>
+</ul>
+​</div>
+<img src="images/2023_symposium/group.webp">
+</div>
+
+<h2>Event Schedule</h2>
 
 <ul>
   <li><strong>9:00 am - 10:00 am</strong> : Poster Set Up</li>
@@ -34,11 +54,14 @@ those who work as a STEAM environmental professional.</p>
   <li><strong>1:00 pm - 1:30 pm</strong> : Closing Remarks</li>
 </ul>
 
-<img src="images/2023_symposium/group.webp">
 
-
+<div class="equalColumns">
+<div>
+<img src="images/2023_symposium/poster.webp">
+<img src="images/2023_symposium/line.webp">
 </div>
 
+<div>
 <h2>Symposium Design</h2>
 <p>During the Colloquy Sessions:
   <ul>
@@ -46,3 +69,6 @@ those who work as a STEAM environmental professional.</p>
     <li>Students presented their research poster to college students, professors, and professionals</li>
   </ul>
 Each governmental and non-governmental agency brought multiple representatives to facilitate these discussions.</p>
+</div>
+
+</div>
