--- a/what_we_had.html
+++ b/what_we_had.html
@@ -10,6 +10,15 @@
   <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
+
+<nav>
+<a href="index.html">Home</a> |
+<a href="what_we_had.html">What We Had</a> |
+<a href="what_we_did.html">What We Did</a> |
+<a href="what_we_are_doing.html">What We Are Doing About It</a>
+<a href="symposium_2024.html">Symposium 2024</a>
+<a href="the_team.html">The Team</a>
+</nav>
   <h1>What We Had</h1>
   <p>Biodiversity, ecosystem functions, and Native American
   culture</p>
