switch over to jpegs

--- a/what_we_are_doing.html
+++ b/what_we_are_doing.html
@@ -46,10 +46,10 @@ will test temperature tolerance, as well as salt tolerance in Atlantic white ced
 <div class="equalColumns">
 <div>
 <div class="tiledBlurb">
-<img src="images/ADD_students_and_tree_ring.webp">
+<img src="images/ADD_students_and_tree_ring.jpg">
 </div>
 <div class="tiledBlurb">
-<img src="images/ADD_students_learning.webp">
+<img src="images/ADD_students_learning.jpg">
 </div>
 </div>
 <div>
@@ -84,7 +84,7 @@ She erected 49 dead 40+ foot tall AWC trees in Madison Square Park, NYC.</p>
 </div>
 
 <div>
-<img src="images/watering_saplings.webp">
+<img src="images/watering_saplings.jpg">
 <p>A student waters the 49 seedlings that are growing publicly on CNU's campus as a symbol of hope and resiliency for this threatened ecosystem</p>
 </div>
 </div>
@@ -99,7 +99,7 @@ Wildlife Refuge in December 2021 where they planted <strong>750</strong> seedlin
 <p>In November 2022, 6 students and Dr. Atkinson planted <strong>1000 AWC seedlings</strong>!</p>
 <div class="equalColumns">
 <div>
-<img src="images/2022_planting.webp">
+<img src="images/2022_planting.jpg">
 </div>
 <div>
 <img src="images/2023_planting.jpg">
