--- a/what_we_did.html
+++ b/what_we_did.html
@@ -28,7 +28,7 @@ detrimental consequences for wetland ecosystems</p>
 
   <div class="tiledBlurb">
   <h2>Ditching</h2>
-  <img src="images/great_dismal_swamp.webp">
+  <img src="images/great_dismal_swamp.jpg">
   <p>Ditching swamps alters the hydrology of the ecosystem by lowering the water table and exposing the peat to oxygen.
   Unsaturated peat decomposes, releasing carbon dioxide into the atmosphere.
   Swamps valued as carbon sinks are converted to carbon sources.
@@ -38,7 +38,7 @@ detrimental consequences for wetland ecosystems</p>
 
   <div class="tiledBlurb">
   <h2>Sea Level Rise</h2>
-  <img src="images/sea_level_rise.webp">
+  <img src="images/sea_level_rise.jpg">
   <p>The global sea level rise, caused by thermal expansion and melting ice,
   has caused saltwater to inundate the soil upon which Atlantic white cedar grows.
   Salt stress inhibits tree growth, development, and survival.
@@ -50,7 +50,7 @@ detrimental consequences for wetland ecosystems</p>
 <div class="equalColumns">
   <div class="tiledBlurb">
   <h2>Deforestation</h2>
-  <img src="images/deforestation.webp">
+  <img src="images/deforestation.jpg">
   <p>Atlantic white cedar was almost harvested to extinction in the United States,
   where its lumber was used for roof shingles, boats, and more.
   This extreme harvesting has drastically reduced the population of the Cedar and eliminated habitats.</p>
@@ -58,7 +58,7 @@ detrimental consequences for wetland ecosystems</p>
 
   <div class="tiledBlurb">
   <h2>Fire</h2>
-  <img src="images/swamp_fire.webp">
+  <img src="images/swamp_fire.jpg">
   <p>In ditched and drained wetlands, fires burn quickly and spread rapidly due to the large amount of dry organic matter.
   Fire releases carbon dioxide and burns through meters of peat that took hundreds of years to form. 
   <p>In 2011, lightning struck in the Great Dismal Swamp, igniting a fire that cleared 5,500 acres of land in one week.
