--- a/what_we_had.html
+++ b/what_we_had.html
@@ -25,28 +25,28 @@
   <h2>Biodiversity</h2>
   <div class="figureGallery">
     <figure>
-      <h3>Atlantic White Cedar</h3><img src="images/awc.webp" alt=
+      <h3>Atlantic White Cedar</h3><img src="images/awc.jpg" alt=
       "Atlantic White Cedar">
       <figcaption>
         Chamaecyparis thyoides
       </figcaption>
     </figure>
     <figure>
-      <h3>Eastern Red Cedar</h3><img src="images/erc.webp" alt=
+      <h3>Eastern Red Cedar</h3><img src="images/erc.jpg" alt=
       "Eastern Red Cedar">
       <figcaption>
         Juniperus virginiana
       </figcaption>
     </figure>
     <figure>
-      <h3>Loblolly Pine</h3><img src="images/loblolly.webp" alt=
+      <h3>Loblolly Pine</h3><img src="images/loblolly.jpg" alt=
       "Loblolly Pine">
       <figcaption>
         Pinus taeda
       </figcaption>
     </figure>
     <figure>
-      <h3>Bald Cypress</h3><img src="images/bald_cypress.webp" alt=
+      <h3>Bald Cypress</h3><img src="images/bald_cypress.jpg" alt=
       "Bald Cypress">
       <figcaption>
         Taxodium distichum
@@ -112,7 +112,7 @@
     </div>
   </div>
     <figure>
-      <img src="images/making_their_boats.webp" alt=
+      <img src="images/making_their_boats.jpg" alt=
       "Native Americans making boats">
       <figcaption>
         Native Americans used a mixture of mud and straw to dig out
