--- a/symposium_2024.html
+++ b/symposium_2024.html
@@ -41,7 +41,7 @@ those who work as a STEAM environmental professional.</p>
   <li>Environmental Professionals are encouraged to bring items for an informational table</li>
 </ul>
 ​</div>
-<img src="images/2023_symposium/group.webp">
+<img src="images/2023_symposium/group.jpg">
 </div>
 
 <h2>Event Schedule</h2>
@@ -57,8 +57,8 @@ those who work as a STEAM environmental professional.</p>
 
 <div class="equalColumns">
 <div>
-<img src="images/2023_symposium/poster.webp">
-<img src="images/2023_symposium/line.webp">
+<img src="images/2023_symposium/poster.jpg">
+<img src="images/2023_symposium/line.jpg">
 </div>
 
 <div>
