--- a/the_team.html
+++ b/the_team.html
@@ -28,13 +28,13 @@ See the collaborators and donors making this project a possibility.</p>
 <div class="equalColumns">
 
   <div class="memberTile">
-  <img src="images/team/robert_atkinson.png">
+  <img src="images/team/robert_atkinson.jpg">
   <h3>Dr. Rob Atkinson</h3>
   <p>Professor of Biology</p>
   </div>
 
   <div class="memberTile">
-  <img src="images/team/janet_steven.png">
+  <img src="images/team/janet_steven.jpg">
   <h3>Dr. Janet Steven</h3>
   <p>Professor of Biology</p>
   </div>
@@ -50,7 +50,7 @@ See the collaborators and donors making this project a possibility.</p>
 <div class="equalColumns">
 
   <div class="memberTile">
-  <img src="images/team/jon_russo.webp">
+  <img src="images/team/jon_russo.jpg">
   <h3>Jon Russo</h3>
   <p>CWC Lab Manager</p>
   <p>Mentor</p>
@@ -64,7 +64,7 @@ See the collaborators and donors making this project a possibility.</p>
   </div>
 
   <div class="memberTile">
-  <img src="images/team/madelyn_steimer.webp">
+  <img src="images/team/madelyn_steimer.jpg">
   <h3>Madelyn Steimer </h3>
   <p>Data integrity</p>
   <p>Mentor</p>
@@ -74,19 +74,19 @@ See the collaborators and donors making this project a possibility.</p>
 <div class="equalColumns">
 
   <div class="memberTile">
-  <img src="images/team/jordan_williams.webp">
+  <img src="images/team/jordan_williams.jpg">
   <h3>Jordan Williams</h3>
   <p>Mentor</p>
   </div>
 
   <div class="memberTile">
-  <img src="images/team/bri_powers.webp">
+  <img src="images/team/bri_powers.jpg">
   <h3>Bri Powers</h3>
   <p>Mentor</p>
   </div>
 
   <div class="memberTile">
-  <img src="images/team/j_mitchell_doyle.webp">
+  <img src="images/team/j_mitchell_doyle.jpg">
   <h3>J. Mitchell Doyle</h3>
   <p>Master's thesis on AWC launched the Fear to Hope project</p>
   </div>
