--- a/BACKUP/symposium_2024.html
+++ b/BACKUP/symposium_2024.html
@@ -15,10 +15,11 @@
 <a href="index.html">Home</a> |
 <a href="what_we_had.html">What We Had</a> |
 <a href="what_we_did.html">What We Did</a> |
-<a href="what_we_are_doing.html">What We Are Doing About It</a> |
-<a href="symposium_2024.html">Symposium 2024</a> |
+<a href="what_we_are_doing.html">What We Are Doing About It</a>
+<a href="symposium_2024.html">Symposium 2024</a>
 <a href="the_team.html">The Team</a>
 </nav>
+
 <h1>3rd Annual Fear to Hope Coastal Resilience Symposium</h1>
 <strong>Thursday, April 18, 2024</strong>
 <strong>Peebles Theater at Christopher Newport University</strong>
@@ -71,5 +72,3 @@ Each governmental and non-governmental agency brought multiple representatives t
 </div>
 
 </div>
-</body>
-</html>
