--- a/BACKUP/the_team.html
+++ b/BACKUP/the_team.html
@@ -15,10 +15,11 @@
 <a href="index.html">Home</a> |
 <a href="what_we_had.html">What We Had</a> |
 <a href="what_we_did.html">What We Did</a> |
-<a href="what_we_are_doing.html">What We Are Doing About It</a> |
-<a href="symposium_2024.html">Symposium 2024</a> |
+<a href="what_we_are_doing.html">What We Are Doing About It</a>
+<a href="symposium_2024.html">Symposium 2024</a>
 <a href="the_team.html">The Team</a>
 </nav>
+
 <h1>The Team</h1>
 <p>Meet the collaborating CNU faculty and students from diverse perspectives and disciplines.
 See the collaborators and donors making this project a possibility.</p>
@@ -134,5 +135,3 @@ See the collaborators and donors making this project a possibility.</p>
 
 </div>
 
-</body>
-</html>
