--- a/BACKUP/what_we_are_doing.html
+++ b/BACKUP/what_we_are_doing.html
@@ -15,10 +15,11 @@
 <a href="index.html">Home</a> |
 <a href="what_we_had.html">What We Had</a> |
 <a href="what_we_did.html">What We Did</a> |
-<a href="what_we_are_doing.html">What We Are Doing About It</a> |
-<a href="symposium_2024.html">Symposium 2024</a> |
+<a href="what_we_are_doing.html">What We Are Doing About It</a>
+<a href="symposium_2024.html">Symposium 2024</a>
 <a href="the_team.html">The Team</a>
 </nav>
+
 <h2>Statewide VA High School STEAM Mentoring</h2>
 <div class="equalColumns">
 <div>
@@ -120,5 +121,8 @@ assist in gathering measurements of the seedlings.</p>
 <img src="images/2023_adoption_with_sign.jpg">
 </div>
 </div>
+
+
+
 </body>
 </html>
