--- a/BACKUP/what_we_did.html
+++ b/BACKUP/what_we_did.html
@@ -15,10 +15,11 @@
 <a href="index.html">Home</a> |
 <a href="what_we_had.html">What We Had</a> |
 <a href="what_we_did.html">What We Did</a> |
-<a href="what_we_are_doing.html">What We Are Doing About It</a> |
-<a href="symposium_2024.html">Symposium 2024</a> |
+<a href="what_we_are_doing.html">What We Are Doing About It</a>
+<a href="symposium_2024.html">Symposium 2024</a>
 <a href="the_team.html">The Team</a>
 </nav>
+
 <h1>What We Did</h1>
 <p>The anthropogenic (human caused) mishaps and the
 detrimental consequences for wetland ecosystems</p>
@@ -66,5 +67,6 @@ detrimental consequences for wetland ecosystems</p>
   </div>
 
 </div>
+
 </body>
 </html>
