nail down bullet points, abbreviate

--- a/src/the_team.html
+++ b/src/the_team.html
@@ -71,6 +71,8 @@ See the collaborators and donors making this project a possibility.</p>
 
 </div>
 
+<div class="noBullets">
+
 <div class="centered">
 <div>
 <h3>Members Not Pictured:</h3>
@@ -81,6 +83,7 @@ See the collaborators and donors making this project a possibility.</p>
 <li>Haleigh Earsing</li>
 </ul>
 </div>
+
 
 <div class="equalColumns">
 
@@ -100,10 +103,10 @@ See the collaborators and donors making this project a possibility.</p>
 <h2>Donors</h2>
 <ul>
 <li>Smithfield Foods</li>
-<li>VA Department of Environmental Quality</li>
+<li>VA Dept. of Environmental Quality</li>
 <li>Tetra Tech</li>
-<li>VA Department of Wildlife Resources</li>
-<li>VA Association of Wetland Professionals</li>
+<li>VA Dept. of Wildlife Resources</li>
+<li>VA Assoc. of Wetland Professionals</li>
 <li>Bonner Foundation</li>
 <li>Wetland Studies and Solutions, Inc.</li>
 <li>Chesapeake Bay Foundation</li>
@@ -113,3 +116,4 @@ See the collaborators and donors making this project a possibility.</p>
 
 </div>
 
+</div>
