--- a/the_team.html
+++ b/the_team.html
@@ -92,6 +92,8 @@ See the collaborators and donors making this project a possibility.</p>
 
 </div>
 
+<div class="noBullets">
+
 <div class="centered">
 <div>
 <h3>Members Not Pictured:</h3>
@@ -102,6 +104,7 @@ See the collaborators and donors making this project a possibility.</p>
 <li>Haleigh Earsing</li>
 </ul>
 </div>
+
 
 <div class="equalColumns">
 
@@ -121,10 +124,10 @@ See the collaborators and donors making this project a possibility.</p>
 <h2>Donors</h2>
 <ul>
 <li>Smithfield Foods</li>
-<li>VA Department of Environmental Quality</li>
+<li>VA Dept. of Environmental Quality</li>
 <li>Tetra Tech</li>
-<li>VA Department of Wildlife Resources</li>
-<li>VA Association of Wetland Professionals</li>
+<li>VA Dept. of Wildlife Resources</li>
+<li>VA Assoc. of Wetland Professionals</li>
 <li>Bonner Foundation</li>
 <li>Wetland Studies and Solutions, Inc.</li>
 <li>Chesapeake Bay Foundation</li>
@@ -134,5 +137,6 @@ See the collaborators and donors making this project a possibility.</p>
 
 </div>
 
+</div>
 </body>
 </html>
