--- a/index.html
+++ b/index.html
@@ -11,14 +11,22 @@
 </head>
 <body>
 
+<div "centered">
 <nav>
 <a href="index.html">Home</a> |
 <a href="what_we_had.html">What We Had</a> |
 <a href="what_we_did.html">What We Did</a> |
 <a href="what_we_are_doing.html">What We Are Doing About It</a> |
-<a href="symposium_2024.html">Symposium 2024</a> |
 <a href="the_team.html">The Team</a>
 </nav>
+
+</div>
+
+<hr>
+<div class="noticeText">
+<a href="symposium_2024.html">Register for Symposium 2024!</a>
+</div>
+
   <h1>Fear to Hope</h1>
   <p>Ghost Forests. Species Extinction. Eco-Anxiety. Climate
   Crisis. These are what we fight.</p>
@@ -26,6 +34,7 @@
   Mitigation. These are what we seek.</p>
   <h2>Mission</h2>
   <div class="equalColumns">
+  <img src="images/holding_sapling.png">
   <p>Coastal ecosystems are biodiverse and perform many services
   valued by society. As a result of climate change, ghost forests
   (eerie gray stands of dead trees) are forming, shorelines are
@@ -36,7 +45,6 @@
   authentic research efforts can simultaneously hasten the pace of
   research now, and widen the STEAM pipeline to ensure a workforce
   empowered to address the challenges of the future.</p>
-  <img src="images/holding_sapling.png">
   </div>
   <h2>More Information</h2>
   <div class="equalColumns">
@@ -59,7 +67,5 @@
         <p>Students, faculty, collaborators, and partners</p>
     </div>
   </div>
-
-  <h2>Check out <a href="symposium_2024.html">Symposium 2024!</a></h2>
 </body>
 </html>
