--- a/symposium_2024.html
+++ b/symposium_2024.html
@@ -11,14 +11,22 @@
 </head>
 <body>
 
+<div "centered">
 <nav>
 <a href="index.html">Home</a> |
 <a href="what_we_had.html">What We Had</a> |
 <a href="what_we_did.html">What We Did</a> |
 <a href="what_we_are_doing.html">What We Are Doing About It</a> |
-<a href="symposium_2024.html">Symposium 2024</a> |
 <a href="the_team.html">The Team</a>
 </nav>
+
+</div>
+
+<hr>
+<div class="noticeText">
+<a href="symposium_2024.html">Register for Symposium 2024!</a>
+</div>
+
 <h1>3rd Annual Fear to Hope Coastal Resilience Symposium</h1>
 <strong>Thursday, April 18, 2024</strong>
 <strong>Peebles Theater at Christopher Newport University</strong>
