--- a/the_team.html
+++ b/the_team.html
@@ -11,14 +11,22 @@
 </head>
 <body>
 
+<div "centered">
 <nav>
 <a href="index.html">Home</a> |
 <a href="what_we_had.html">What We Had</a> |
 <a href="what_we_did.html">What We Did</a> |
 <a href="what_we_are_doing.html">What We Are Doing About It</a> |
-<a href="symposium_2024.html">Symposium 2024</a> |
 <a href="the_team.html">The Team</a>
 </nav>
+
+</div>
+
+<hr>
+<div class="noticeText">
+<a href="symposium_2024.html">Register for Symposium 2024!</a>
+</div>
+
 <h1>The Team</h1>
 <p>Meet the collaborating CNU faculty and students from diverse perspectives and disciplines.
 See the collaborators and donors making this project a possibility.</p>
