forgot to run build

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <h1>Fear to Hope</h1>
   
   <div class="noticeText">
-  <h2><a href="symposium_2024.html">Register for Symposium 2024!</a></h2>
+  <h2><a href="https://advancement.cnu.edu/register/feartohope">Register for Symposium 2025!</a></h2>
   </div>
   
   <p>Ghost Forests. Species Extinction. Eco-Anxiety. Climate
